[package]
name = "parking_lot-benchmark"
version = "0.0.0"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
edition = "2018"

[dependencies]
parking_lot = "0.11.2"
seqlock = "0.1"
libc = "0.2"
posh = { path = ".." }
futures = { version = "0.3.19", default-features = false, features = ["alloc", "executor", "thread-pool"] }
tokio = { version = "1.15.0", features = ["sync"] }
async-std = "1.10.0"

[[bin]]
name = "mutex"
path = "src/mutex.rs"

[[bin]]
name = "rwlock"
path = "src/rwlock.rs"

[features]
nightly = ["parking_lot/nightly"]
deadlock_detection = ["parking_lot/deadlock_detection"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["synchapi"] }

[profile.release]
lto = "thin"